test/conformance/chainsaw/mutating-admission-policy-reports-v1/background/generated-reporting-opt-in/generated-absent.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingAdmissionPolicy
metadata:
  name: mpol-reporting-opt-in-map-v1
  labels:
    (contains(keys(@), 'reports.kyverno.io/enabled')): false
    (contains(keys(@), 'reports.kyverno.io/disabled')): false
