test/conformance/chainsaw/mutating-admission-policy-reports-v1/background/generated-reporting-opt-in/generated-enabled.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingAdmissionPolicy
metadata:
  name: mpol-reporting-opt-in-map-v1
  labels:
    (contains(keys(@), 'reports.kyverno.io/enabled')): true
    (contains(keys(@), 'reports.kyverno.io/disabled')): false
    reports.kyverno.io/enabled: 'true'
---
apiVersion: policies.kyverno.io/v1beta1
kind: MutatingPolicy
metadata:
  name: reporting-opt-in-map-v1
status:
  generated: true
