test/conformance/chainsaw/mutating-admission-policy-reports-v1/background/generated-reporting-opt-in/policy-assert.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: MutatingPolicy
metadata:
  name: reporting-opt-in-map-v1
status:
  conditionStatus:
    ready: true
